# PilotCode

./: .gitignore  ARCHITECTURE.md  CODE_INDEXING.md  COMPARISON_ANALYSIS.md  DOCUMENTS_COMPREHENSIVE_REPORT.md  DOCUMENTS_SUMMARY_REPORT.md  FEATURE_AUDIT.md  FEATURE_LIST.md  IMPLEMENTATION_STATUS.md  LICENSE  MISSING_FEATURES.md  Makefile  ORCHESTRATION_OPTIMIZATION_PLAN.md  PILOTCODE_IMPROVEMENT_ANALYSIS.md  PILOTCODE_IMPROVEMENT_RESULTS.md  PROGRESS_SUMMARY.md  QUICKSTART.md  QUICKSTART_EN.md  README.md  README_EN.md  SETUP_QWEN_API.md  STARTUP_GUIDE.md  STATUS.md  SWE_BENCH_TEST_REPORT.md  TEST_ANALYSIS.md  TEST_COVERAGE_REPORT.md  TEST_PLAN.md  TEST_SUMMARY.md  TUI_IMPLEMENTATION.md  TUI_V2_ENHANCEMENTS.md  WEB_UI_README.md  WINDOWS_GUIDE.md  api_key_security_fix_plan.md  api_key_security_fix_summary.md  batch_instances.txt  code_analysis_report.md  codebase_analysis_demos.md  codebase_analysis_root.md  codebase_analysis_scheduler.md  comprehensive_analysis_report.md  (+114 more)
.github/workflows/: release.yml  test.yml
config/: models.json  settings.json  settings.json.example
config/knowhow/: qwen3-coder-30b.json
docs/: P-EVR-重构分析.md  README.md  README_EN.md  mempo_context_management.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_DEEP_ANALYSIS.md  ARCHITECTURE_GAP_ANALYSIS.md  ARCHITECTURE_GAP_REPORT.md  ARCHITECTURE_ROUND3.md  CODE_ANALYSIS_DEEP_DIVE.md  ai_coding_framework.md  display-layer-framework.md  hook-system.md  multi-model-support.md  tools-commands-plugins.md
docs/changelogs/: CHANGELOG.md
docs/commands/: README.md  clear.md  compact.md  config.md  cost.md  format.md  git.md  help.md  index.md  lint.md  model.md  new.md  quit.md  search.md  session.md  status.md  theme.md
docs/comparison/: COMPARISON_ANALYSIS.md  COMPARISON_WITH_CLAUdecode.md
docs/features/: FEATURE_LIST.md  README.md  agent-system.md  code-indexing.md  codebase-intelligence.md  context-compaction.md  context-management.md  error-recovery.md  large-codebase-retrieval.md  model-configuration.md  model-configuration_en.md  model-system.md  model_capability_adaptation.md  p-evr-task-orchestration.md  session-management.md  unified-directory-structure.md  weak-model-compensation.md
docs/guides/: CLEANUP_REPORT.md  QUICKSTART.md  QUICKSTART_EN.md  README.md  SETUP_QWEN_API.md  WINDOWS_GUIDE.md  adding-knowhow-rules.md  analyze-large-project.md  development-workflow.md  e2e-testing.md  llm-setup.md  qwen-api-setup.md  tui-automation-testing.md  unified-directory-structure.md
docs/implementation/: IMPLEMENTATION_ROUND2.md  IMPLEMENTATION_ROUND3.md  IMPLEMENTATION_STATUS.md  TUI_V2_ENHANCEMENTS.md
docs/orchestration/: README.md
docs/plugins/: IMPLEMENTATION_COMPLETE.md  PLUGIN_SYSTEM.md  README.md  commands.md  core.md  hooks.md  loader.md  lsp.md  policy.md  security.md  sources.md
docs/progress/: PROGRESS_SUMMARY.md
docs/test/: README.md
docs/tools/: README.md  agent.md  bash.md  codecontext.md  codeindex.md  codesearch.md  fileedit.md  fileread.md  filewrite.md  git.md  glob.md  grep.md  lsp.md  powershell.md  task.md  todo.md  webfetch.md  websearch.md
examples/: mempo_context_demo.py
examples/complex_scheduler/: ANALYSIS_REPORT.md  OPTIMIZATION_SUMMARY.md  benchmark.py  comparison_chart.py  requirements.txt  system_requirements.md  test_initial.py  test_optimized_scheduler.py
examples/orchestration/: ARCHITECTURAL_COMPLIANCE.md  CORE_ABSTRACTIONS.md  DESIGN_FLAW_REPORT.md  SUMMARY.md  auto_decomposition_demo.py  basic_decomposition.py  code_smells.json  complex_task_demo.py  real_world_usage.py  top_design_flaws.json
examples/plugins/: local-marketplace.json
scripts/: run_plugin_tests.sh  run_regression_tests.sh  run_windows.ps1  setup_qwen.sh  test_config_check.py  test_llm_config.py  test_pilotcode_config.py  test_verify.py
src/claudecode/: __init__.py  __main__.py  cli.py  main.py  query_engine.py
src/pilotcode/: __init__.py  __main__.py  cli.py  main.py  query_engine.py
src/tests/: __init__.py  test_ai_security.py  test_context_manager.py  test_file_metadata_cache.py  test_file_selector_tool.py  test_github_service.py  test_prompt_cache.py  test_ripgrep_tool.py  test_session_persistence.py  test_tool_sandbox.py  test_tools.py  test_unicode_input.py  test_update_checker.py
swe_bench_test/: build_mini_dataset.py  debug_eval.py  deepseek-v4-pro.pilotcode_test.json  evaluation_summary_25_instances.json  evaluation_summary_25_instances_fixed.json  evaluation_summary_25_instances_merged.json  evaluation_summary_5_instances.json  evaluation_summary_5_instances_v3_fixed.json  failure_analysis_report.txt  log_django-11564.txt  log_django__django-11001.txt  log_django__django-11039.txt  log_django__django-11099.txt  log_django__django-11564.txt  log_django__django-11630.txt  log_django__django-11848.txt  pilotcode_v4.pilotcode_v4_eval.json  run_eval.py  run_eval_only.py  run_full_pipeline.py  run_pilotcode_harness.py  run_v5_harness.py  test_pilotcode_simple.py  test_swebench_pipeline.py
test_complex_system/: benchmark.py  comparison_chart.py  test_initial.py  test_optimized_scheduler.py
test_complex_system/distributed_scheduler/: state.py  task.py  worker.py
test_complex_system/optimized_scheduler/: __init__.py  metrics.py  registry.py  scheduler.py  state.py  worker.py
tests/: README.md  __init__.py  base.py  conftest.py  mock_llm.py  parity_audit.py  test_adaptive_context_manager.py  test_agent_system.py  test_commands.py  test_compression_feedback.py  test_hierarchical_memory.py  test_integration.py  test_memory_value.py  test_model_capability.py  test_orchestration.py  test_permissions.py  test_plugin_system.py  test_query_engine.py  test_services_advanced.py  test_task_aware_compression.py  test_tools_comprehensive.py
tests/e2e/: README.md  analyze_results.py  conftest.py  run_e2e_tests.py  test_file.txt  verify_tasks.py
tests/integration/: test_code_index.py  test_code_intelligence_commands.py  test_conversation_fork.py  test_hierarchical_index.py  test_incremental_indexing.py  test_orchestration_integration.py  test_package_commands.py  (+3 more)
(+751 files in other folders)
