[project]
name = "pilotcode"
version = "0.1.0"
description = "Python rewrite of Claude Code - AI-powered coding assistant"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "textual>=0.70.0",
    "aiofiles>=23.0.0",
    "watchdog>=4.0.0",
    "gitpython>=3.1.0",
    "shellingham>=1.5.0",
    "platformdirs>=4.0.0",
    "loguru>=0.7.0",
    "anyio>=4.0.0",
    "sniffio>=1.3.0",
    "mcp>=1.0.0",
    "zod@git+https://github.com/danielgtaylor/python-zod",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
pilotcode = "pilotcode.cli:main"
pc = "pilotcode.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pilotcode"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src/tests"]
